--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="container">
     <header>
       <h1>Responsive sample page</h1>
-    </header>a
+    </header>
     <nav>
       <ul>
         <li><a href="#">Menu 1</a></li>
